package com.company;

/**
 * Created by Andrey on 01.12.2015.
 */
public class Abstract {
    int itsValence;
    String itsName;
}
