package com.company;


/**
 * Created by Andrey on 02.08.2015.
 */
public class Element {
        String[] arrayName;
        int[] arrayQuality;


}









